--- a/qr-code-component-main/style.css
+++ b/qr-code-component-main/style.css
@@ -1,51 +1,8 @@
-.attribution {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-
-  width: 320px;
-  height: 499px;
-  padding: 16px 16px 40px;
-
-  border-radius: 20px;
-  font-size: 11px;
-  background-color: white;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-
-.attribution img {
-  width: 288px;
-  height: 288px;
-  border-radius: 10px;
-
-}
-
-.attribution h2 {
-  color: hsl(218, 44%, 22%);
-  font-size: 22px;
-  font-family: "Outfit", sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.attribution p {
-  color: hsl(216, 15%, 48%);
-  font-size: 15px;
-  font-family: "Outfit", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-}
-
-.attribution a {
-  color: hsl(228, 45%, 44%);
-}
-
-.description>h2,
-p {
-  width: 256px;
-}
-
 
 body {
   display: flex;
@@ -54,4 +11,70 @@ body {
   align-items: center;
   font-size: 15px;
   background-color: hsl(212, 45%, 89%);
+  min-height: 100vh;
+}
+
+.qr-code-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
+  width: 320px;
+  height: 499px;
+  margin-top: 7rem;
+  padding: 16px 16px 40px;
+  gap: 20px;
+
+  border-radius: 20px;
+  background-color: white;
+}
+
+.qr-code-container img {
+  width: 100%;
+  border-radius: 10px;
+  text-align: center;
+}
+
+.qr-code-container h2 {
+  color: hsl(218, 44%, 22%);
+  font-size: 22px;
+  font-family: "Outfit", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.qr-code-container p {
+  color: hsl(216, 15%, 48%);
+  font-size: 15px;
+  font-family: "Outfit", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.qr-code-container a {
+  color: hsl(228, 45%, 44%);
+}
+
+.description h2,
+p {
+  width: 256px;
+  text-align: center;
+}
+
+.description p {
+  padding-top: 1.3rem;
+}
+
+.attribution,
+.qr-code-container {
+  font-family: "Outfit", sans-serif;
+  width: 320px;
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+  padding-top: 0.75rem;
 }
